Changed image service URL

--- a/mod_image/httpd.conf
+++ b/mod_image/httpd.conf
@@ -1,6 +1,6 @@
 # example configureation
 LoadModule image_module /usr/lib/apache2/modules/mod_image.so
-<Location /service/image/resize.png>
+<Location /service/image/resize.jpg>
     SetHandler image-service
     ImageRoot "/home/blago/Projects/openhouse/images"
 </Location>
