refactored the apache module to rely more heavily on Qt

--- a/mod_image/Makefile
+++ b/mod_image/Makefile
@@ -20,8 +20,8 @@ APXS_LDFLAGS_SHLIB=`$(APXS) -q LDFLAGS_SHLIB`
 APXS_SYSCONFDIR=`$(APXS) -q SYSCONFDIR`
 APXS_LIBS_SHLIB=`$(APXS) -q LIBS_SHLIB`
 APP_INCLUDES = `pkg-config --cflags GraphicsMagick++` `pkg-config --cflags libcurl` `pkg-config --cflags QtCore`
-APP_LIBS = `pkg-config --libs GraphicsMagick++` `pkg-config --libs libcurl` `pkg-config --libs QtCore` -lboost_filesystem-mt
-OBJECTS = mod_image.o md5.o md5wrapper.o UrlLibrary.o
+APP_LIBS = `pkg-config --libs GraphicsMagick++` `pkg-config --libs libcurl` `pkg-config --libs QtCore`
+OBJECTS = mod_image.o
 
 # the default target
 all: mod_image.so
