--- a/iphone/OpenHouse-Info.plist
+++ b/iphone/OpenHouse-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>logo.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.dachev.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.dachev.openhouse</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
